--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </header>
           <main class="modal__content" id="modal-1-content">
             <p style="font-weight: bold;" class= "h5">შექმენი Recommenu-ის ანგარიში!</p>
-            <form  id="registration-form" style="min-width: 340px;" action="https://api.web3forms.com/submit" method="POST">
+            <form  id="registration-form" action="https://api.web3forms.com/submit" method="POST">
               <input type="hidden" name="access_key" value="d9493445-348e-40a5-b29e-080015797912">
               <input type="hidden" name="redirect" value="http://127.0.0.1:5500/success.html">
               <div class="form-group my-4">
