--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <section class="bg-center py-0 mb-12" id="about" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
       <section class="about py-0">
         <div class="container">
-          <h2 class="h4 text-uppercase text-primary">ვისთვის არის Recommenu ?</h2>
-          <p class="mb-5 h5">საკვები ობიექტებისათვის რომლებსაც სურთ გაზარდონ გაყიდვები და ამავდროულად შეუქმნან კომფორტი საკუთარ მომხმარებლებს.</p>
+          <h2 class="h4 text-uppercase text-primary why">ვისთვის არის Recommenu ?</h2>
+          <p class="mb-5 h5 why-reason">საკვები ობიექტებისათვის რომლებსაც სურთ გაზარდონ გაყიდვები და ამავდროულად შეუქმნან კომფორტი საკუთარ მომხმარებლებს.</p>
          
           <h2 class="h3 text-uppercase  text-center" style="margin-top: 120px;margin-bottom: 40px;">რას გთავაზობთ</h2>
          
